--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,5 +17,5 @@ jobs:
       env:
         PRIVATE_KEY: ${{ secrets.CORONAKEY }}
         HOST: 157.230.195.60
-        PROJECT: CoronaTrend
+        PROJECT: coronatrend
         APP_CONFIG: ${{ secrets.APP_CONFIG }}
