--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,10 +11,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Dokku deploy
-      uses: vitalyliber/dokku-github-action@v6.1
-      env:
-        PRIVATE_KEY: ${{ secrets.CORONAKEY }}
-        HOST: 157.230.195.60
-        PROJECT: coronatrend
+      - uses: actions/checkout@v2
+        with:
+            fetch-depth: 0
+      - id: deploy
+        name: Deploy to dokku
+        uses: idoberko2/dokku-deploy-github-action@v1
+        with:
+            ssh-private-key: ${{ secrets.CORONAKEY }}
+            dokku-host: 157.230.195.60
+            app-name: coronatrend
+ 
