--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,4 +1,4 @@
-name: CD
+name: Dokku Deploy
 
 on:
   push:
@@ -19,6 +19,6 @@ jobs:
         uses: idoberko2/dokku-deploy-github-action@v1
         with:
             ssh-private-key: ${{ secrets.CORONAKEY }}
-            dokku-host: 157.230.195.60
+            dokku-host: ${{ secrets.CORONAHOST }}
             app-name: coronatrend
  
