--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,14 @@ future==0.18.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
+lenspy==1.1.0
 MarkupSafe==2.0.1
+natsort==7.1.1
+pandas==1.1.5
 plotly==5.1.0
+pyarrow==5.0.0
 six==1.16.0
 tenacity==8.0.1
 Werkzeug==2.0.1
-pandas==1.1.5
-natsort==7.1.1
-pyarrow==5.0.0
+
+
