--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -7,7 +7,10 @@ on:
     paths-ignore:
       - 'assets/**'
       - 'GISAID-Dataframes/**'
-
+      - 'provision.sh'
+      - 'dataframegen.py'
+      - 'deleteprovision.py'
+      - 'splitprovision.py'
 jobs:
   build:
 
