README.md revisions

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -9,7 +9,7 @@ on:
       - 'dataframegen.py'
       - 'deleteprovision.py'
       - 'splitprovision.py'
-      - 'README.md
+      - 'README.md'
 jobs:
   build:
 
